--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:support-vector-drawable:27.1.1'
@@ -42,22 +42,17 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.google.firebase:firebase-auth:15.1.0'
     implementation 'com.google.firebase:firebase-firestore:15.0.0'
     implementation 'com.firebaseui:firebase-ui-auth:3.3.0'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
     implementation 'com.firebaseui:firebase-ui:3.3.0'
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'de.hdodenhof:circleimageview:1.2.1'
     implementation 'com.firebaseui:firebase-ui-storage:3.3.0'
     implementation 'com.android.support:support-compat:27.1.1'
-    implementation 'com.anjlab.android.iab.v3:library:1.0.44'
-    implementation 'com.google.firebase:firebase-database:15.0.0'
     implementation 'com.google.firebase:firebase-messaging:17.0.0'
-
-
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.3'
+    implementation 'com.anjlab.android.iab.v3:library:1.0.44'
 
 
 }
