--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:17.0.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.3'
     implementation 'com.anjlab.android.iab.v3:library:1.0.44'
+    //ExifInterface support
+    implementation "com.android.support:exifinterface:27.1.1"
 
 
 }
